RESOLVED FIXED 263144
REGRESSION(268342@main): Web process crashes when loading a cross-origin WebM resource
https://bugs.webkit.org/show_bug.cgi?id=263144
Summary REGRESSION(268342@main): Web process crashes when loading a cross-origin WebM...
Charlie Wolfe
Reported 2023-10-13 15:27:24 PDT
We will fail a message check when scheduling a resource load since the first party for cookies we set is incorrect.
Attachments
Charlie Wolfe
Comment 1 2023-10-13 15:31:16 PDT
Charlie Wolfe
Comment 2 2023-10-13 15:35:16 PDT
EWS
Comment 3 2023-10-14 15:52:06 PDT
Committed 269345@main (a971ac1032e7): <https://commits.webkit.org/269345@main> Reviewed commits have been landed. Closing PR #19070 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.