REGRESSION(268342@main): Web process crashes when loading a cross-origin WebM resource https://bugs.webkit.org/show_bug.cgi?id=263144 rdar://116894594

Reviewed by Pascoe.

WebM video requests currently always set the first party for cookies to its own URL, so our
allowsFirstPartyForCookies message check will fail when loading a cross origin video. The resource
loader will end up setting the correct first party for cookies if one is not already set, so let’s
just not set one here.

* LayoutTests/http/tests/media/cross-origin-webm-video-expected.txt: Added.
* LayoutTests/http/tests/media/cross-origin-webm-video.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::load):

Canonical link: https://commits.webkit.org/269345@main